# wei-tray

./: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src/: lib.rs  main.rs
