[package]
name = "wei-tray"
version = "0.2.3"
edition = "2021"
description = "wei tray"
documentation = "https://github.com/zuiyue-com/wei-tray"
homepage = "https://github.com/zuiyue-com/wei-tray"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.10"
wei-run = "0.1.18"
systray = "0.4.0"
webbrowser = "0.8.10"
single-instance = "0.3"