[package]
name = "wei-tray"
version = "0.2.5"
edition = "2021"
description = "wei tray"
documentation = "https://github.com/zuiyue-com/wei-tray"
homepage = "https://github.com/zuiyue-com/wei-tray"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.5"
wei-env = "0.2.10"
systray = "0.4.0"
single-instance = "0.3"